Change database connection details in .env
Updated database configuration with new connection details.

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Database Configuration (currently hardcoded in Conexion/conexion.py)
-# DB_HOST=localhost
-# DB_PORT=3306
-# DB_USER=root
-# DB_PASSWORD=Jorge123
+# DB_HOST=mysql-1e5cf4cf-jorgeandresg1207-0fb2.l.aivencloud.com
+# DB_PORT=21654
+# DB_USER=avnadmin
+# DB_PASSWORD=AVNS_OTZRuDz9M2JYkCdEO9T
 # DB_NAME=jluxuries
 
 # Cloudinary Configuration
