Revise database configuration in .env file
Updated database configuration for remote Aiven Cloud.

--- a/.env
+++ b/.env
@@ -1,9 +1,15 @@
-# Database Configuration (currently hardcoded in Conexion/conexion.py)
-# DB_HOST=mysql-1e5cf4cf-jorgeandresg1207-0fb2.l.aivencloud.com
-# DB_PORT=21654
-# DB_USER=avnadmin
-# DB_PASSWORD=AVNS_OTZRuDz9M2JYkCdEO9T
-# DB_NAME=jluxuries
+## ===================================================
+## CONFIGURACIÓN DE LA BASE DE DATOS REMOTA (AIVEN CLOUD)
+## Estos valores son para tu entorno de desarrollo local, 
+## PERO deben apuntar a la base de datos de producción/remota
+## si estás desarrollando en contra de ella.
+## ===================================================
+
+DB_HOST=mysql-1e5cf4cf-jorgeandresg1207-0fb2.l.aivencloud.com
+DB_PORT=21654
+DB_USER=avnadmin
+DB_PASSWORD="AVNS_OTZRuDz9M2JYkCdEO9T"
+DB_DATABASE=jluxuries
 
 # Cloudinary Configuration
 # Reemplaza con tu URL de Cloudinary desde tu dashboard
