--- a/.env
+++ b/.env
@@ -1,17 +1,9 @@
-## ===================================================
-## CONFIGURACIÓN DE LA BASE DE DATOS REMOTA (AIVEN CLOUD)
-## Estos valores son para tu entorno de desarrollo local, 
-## PERO deben apuntar a la base de datos de producción/remota
-## si estás desarrollando en contra de ella.
-## ===================================================
+# Archivo: .env (NO sube a GitHub, se usa con python-dotenv)
 
 DB_HOST=mysql-1e5cf4cf-jorgeandresg1207-0fb2.l.aivencloud.com
 DB_PORT=21654
 DB_USER=avnadmin
-DB_PASSWORD="AVNS_OTZRuDz9M2JYkCdEO9T"
+DB_PASSWORD=AVNS_OTZRuDz9M2JYkCdEO9T
 DB_DATABASE=jluxuries
 
-# Cloudinary Configuration
-# Reemplaza con tu URL de Cloudinary desde tu dashboard
-# Formato: cloudinary://API_KEY:API_SECRET@CLOUD_NAME
 CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@dnlkbbogn
