--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_HOST=mysql-1e5cf4cf-jorgeandresg1207-0fb2.l.aivencloud.com
 DB_PORT=21654
 DB_USER=avnadmin
 DB_PASSWORD=AVNS_OTZRuDz9M2JYkCdEO9T
-DB_DATABASE=jluxuries
+DB_DATABASE=defaultdb
 
 CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@dnlkbbogn
